# rasterizer

./: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: gl.h
lib/glad/src/: gl.c
lib/stb_image/: CMakeLists.txt
resources/assets/cyber-samurai/: cyber-samurai.mtl
resources/assets/porsche-1975/: porsche-1975.mtl
resources/shaders/: screen-quad.frag  screen-quad.vert
src/: camera.hpp  frame-monitor.hpp  frame-presenter.hpp  main.cpp  renderer.hpp  timer.hpp
src/gl/: buffer-object.hpp  buffer.hpp  shader.hpp  texture.hpp  vertex-array-object.hpp  vertex-array.hpp
src/math/: conversions.hpp  matrix.hpp  vector.hpp
src/model/: model.hpp  texture.hpp
src/window/: glfw-guard.hpp  window.cpp  window.hpp
